--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <div class="wrapper">
       <div id="front" class="album">
         <div id="title-box">
-
+<h4>PHARRELL WILLIAMS</H4>
+  <h2> Happy </2>
+    <h4>| FROM DESPICABLE ME...</h4>
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
 
           <!-- Level 2 'HAPPY' Header -->
