automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <div class="wrapper">
       <div id="front" class="album">
         <div id="title-box">
-<h4>PHARRELL WILLIAMS</H4>
+<!-- <h4>PHARRELL WILLIAMS</H4>
   <h2> Happy </2>
-    <h4>| FROM DESPICABLE ME...</h4>
+    <h4>| FROM DESPICABLE ME...</h4> -->
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
 
           <!-- Level 2 'HAPPY' Header -->
@@ -24,7 +24,7 @@
       <div id="back" class="album">
 
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
-        
+
         <!-- Level 1 'HAPPY' Header -->
 
         <!-- Level 3 'WRITTEN BY...' Header -->
@@ -38,7 +38,7 @@
         <!-- span text 'COLUMBIARECORDS.COM' -->
 
         <br>
-        
+
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
 
       </div>
