--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
       </div>
 
       <div id="back" class="album">
+<h3>| FROM DESPICABLE ME...</h3>
+<h1>HAPPY</h1>
+<h3>WRITTEN BY...</h3>
+<p>PUBLISHED BY...</p>
+<span>PHARRELLWILLIAMS.COM</span>
 
+<span>COLUMBIARECORDS.COM</span>
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
 
         <!-- Level 1 'HAPPY' Header -->
