automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <h3>WRITTEN BY...</h3>
 <p>PUBLISHED BY...</p>
 <span>PHARRELLWILLIAMS.COM</span>
-
+<img href="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="image">
 <span>COLUMBIARECORDS.COM</span>
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
 
