automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <br>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
-
+<img href="https://s3.amazonaws.com/learn-verified/sony-logo.png" alt="image2">
       </div>
     </div>
   </body>
