automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <h3>WRITTEN BY...</h3>
 <p>PUBLISHED BY...</p>
 <span>PHARRELLWILLIAMS.COM</span>
-<img href="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="image">
+<img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="image">
 <span>COLUMBIARECORDS.COM</span>
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
 
@@ -46,7 +46,7 @@
         <br>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
-<img href="https://s3.amazonaws.com/learn-verified/sony-logo.png" alt="image2">
+<img src="https://s3.amazonaws.com/learn-verified/sony-logo.png" alt="image2">
       </div>
     </div>
   </body>
