--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <div class="wrapper">
       <div id="front" class="album">
         <div id="title-box">
-
+<h4>PHARRELL WILLIAMS</H4>
+  <h2> Happy </2>
+    <h4>| FROM DESPICABLE ME...</h4>
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
 
           <!-- Level 2 'HAPPY' Header -->
@@ -20,9 +22,15 @@
       </div>
 
       <div id="back" class="album">
-
+<h3>| FROM DESPICABLE ME...</h3>
+<h1>HAPPY</h1>
+<h3>WRITTEN BY PHARRELL WILLIAMS</h3>
+<p>PUBLISHED BY EMI APRIL MUSIC, INC. OBO ITSELF AND MORE WATERFROM NAZARETH (ASCAP) / UNIVERSAL PICTURES MUSIC (ASCAP) | BACKGROUND VOCALS PERFORMED BY RHEA DUMMETT, TREVON HENDERSON, ASHLEY L. LEE, SHAMIKA HIGHTOWER, JASMINE MURRAY AND TERRENCE ROLLE | PRODUCED BY PHARRELL WILLIAMS | RECORDED BY MIKE LARSON FOR I AM OTHER ENTERTAINMENT AT CIRCLE HOUSE STUDIOS, MIAMI, FL | ASSISTED BY MATTHEW DESRAMEAUX | DIGITAL EDITING AND ARRANGEMENT BY ANDREW COLEMAN AND MIKE LARSON FOR I AM OTHER ENTERTAINMENT | MIXED BY LESLIE BRATHWAITE AT MUSIC BOX STUDIOS, ATLANTA, GA.</p>
+<span>PHARRELLWILLIAMS.COM</span>
+<img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="image">
+<span>COLUMBIARECORDS.COM</span>
         <!-- Level 3 '| FROM DESPICABLE ME...' Header -->
-        
+
         <!-- Level 1 'HAPPY' Header -->
 
         <!-- Level 3 'WRITTEN BY...' Header -->
@@ -36,9 +44,9 @@
         <!-- span text 'COLUMBIARECORDS.COM' -->
 
         <br>
-        
-        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
 
+        <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
+<img src="https://s3.amazonaws.com/learn-verified/sony-logo.png" alt="image2">
       </div>
     </div>
   </body>
